# jsonviate

./: .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: main.yml  on-release-main.yml  validate-codecov-config.yml
jsonviate/: __init__.py  model.py
notebooks/: 0.0-validation.ipynb
tests/: model_fixtures.py  test_model.py
tests/data/: mappings.json
tests/data/expected/: cross-references.json  data-objects.json
tests/data/raw/: aws-odr.json
