[tool.poetry]
name = "jsonviate"
version = "0.1.0"
description = ""
authors = ["Gregory Lindsey <gclindsey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jmespath = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^7.0.0"
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
